# pract_stm

./: Cargo.toml
src/: display.rs  display_for_n_bits.rs  display_old.rs  keypad.rs  keypad_1.rs  keypad_old.rs  lib.rs
src/display/: reg.rs
